--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,11 +3,13 @@
 # Add steps that run tests, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/php
 
+
 trigger:
 - master
 
 pool:
-  vmImage: ubuntu-latest
+#  vmImage: ubuntu-latest
+  name: local 
 
 variables:
   phpVersion: 7.2
